@@ -8,8 +8,8 @@ Authors@R: c(
         person("Vladimir", "Kiselev", role=c("ctb"), email="vk6@sanger.ac.uk"),
         person("Felix G.M.", "Ernst", role=c("ctb"), email="felix.gm.ernst@outlook.com"),
         person("Alan", "O'Callaghan", role=c("ctb", "cre"), email="alan.ocallaghan@outlook.com"))
-Version: 1.25.5
-Date: 2022-08-31
+Version: 1.25.6
+Date: 2022-09-05
 License: GPL-3
 Title: Single-Cell Analysis Toolkit for Gene Expression Data in R
 Description: A collection of tools for doing various analyses of
@@ -43,6 +43,7 @@ Imports:
     RcppML,
     uwot,
     pheatmap,
+    ggrastr,
     ggrepel
 Suggests: 
     BiocStyle,
