@@ -50,6 +50,10 @@
 #' @param color_by Alias to \code{colour_by}.
 #' @param text_color Alias to \code{text_colour}.
 #' @param point.padding,force See \code{?ggrepel::geom_text_repel}.
+#' @param rasterise Whether to rasterise the points in the plot with
+#' \code{\link[ggrastr]{rasterise}}. To control the dpi, set
+#' \code{options(ggrastr.default.dpi)},
+#' for example \code{options(ggrastr.default.dpi=300)}.
 #' @param ... Additional arguments for visualization, see
 #' \code{?"\link{scater-plot-args}"} for details.
 #'
@@ -100,8 +104,8 @@ plotReducedDim <- function(
         text_by = NULL, text_size = 5, text_colour = text_color,
         label_format = c("%s %i", " (%i%%)"), other_fields = list(),
         text_color = "black", color_by = NULL,
-        swap_rownames = NULL, point.padding = NA, force = 1, 
-        ...
+        swap_rownames = NULL, point.padding = NA, force = 1,
+        rasterise = FALSE, ...
     ) {
 
     ## Extract reduced dimension representation of cells
@@ -139,12 +143,6 @@ plotReducedDim <- function(
     colour_by <- vis_out$colour_by
     shape_by <- vis_out$shape_by
     size_by <- vis_out$size_by
-    order_by <- vis_out$order_by
-
-    if (!is.null(order_by)) {
-        # browser()
-        df_to_plot <- df_to_plot[order(df_to_plot$order_by), ]
-    }
     
     ## Dispatching to the central plotter in the simple case of two dimensions.
     if (length(to_plot) == 2L) {
@@ -160,7 +158,8 @@ plotReducedDim <- function(
         
         plot_out <- .central_plotter(df_to_plot, xlab = labs[1], ylab = labs[2],
                                      colour_by = colour_by, size_by = size_by,
-                                     shape_by = shape_by, ..., point_FUN = NULL)
+                                     shape_by = shape_by, ..., point_FUN = NULL,
+                                     rasterise = rasterise)
 
         # Adding text with the median locations of the 'text_by' vector.
         if (!is.null(text_by)) {
@@ -190,18 +189,18 @@ plotReducedDim <- function(
 
         return(plot_out)
     }
-
     ## Otherwise, creating a paired reddim plot.
     paired_reddim_plot(df_to_plot, to_plot = to_plot, percentVar = percentVar,
         colour_by = colour_by, shape_by = shape_by, size_by = size_by,
-        dimred = dimred, label_format = label_format, ...)
+        dimred = dimred, label_format = label_format, rasterise = rasterise, ...)
 }
 
 #' @importFrom ggplot2 ggplot facet_grid stat_density geom_point theme
 paired_reddim_plot <- function(df_to_plot, to_plot, dimred, percentVar = NULL,
         colour_by=NULL, shape_by=NULL, size_by=NULL,
         label_format=c("%s %i", " (%i%%)"),
-        add_legend = TRUE, theme_size = 10, point_alpha = 0.6, point_size = NULL
+        add_legend = TRUE, theme_size = 10, point_alpha = 0.6, point_size = NULL,
+        rasterise = FALSE
     ) {
 
     reddim_cols <- seq_along(to_plot)
@@ -246,6 +245,8 @@ paired_reddim_plot <- function(df_to_plot, to_plot, dimred, percentVar = NULL,
     if (!add_legend) {
         plot_out <- plot_out + theme(legend.position = "none")
     }
-
+    if (rasterise) {
+        plot_out <- ggrastr::rasterise(plot_out, geoms = "Point")
+    }
     plot_out
 }
