@@ -65,6 +65,10 @@
         swap_rownames=swap_rownames)
     order_by <- order_by_out$name
     df$order_by <- order_by_out$value
+    if (is.null(df$order_by)) {
+        df$order_by <- seq_len(nrow(df))
+    }
+    df <- df[df$order_by, ]
 
     for (o in other_fields) {
         other <- retrieveCellInfo(se, o, exprs_values=by_exprs_values,
